mariadb/k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: owncloud
  labels:
    app: mariadb
    type: database
spec:
  replicas: 1
  serviceName: "mariadb"
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
        type: database
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - asus-pn51
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      securityContext:
      containers:
        - name: mariadb
          # arm-> image: hypriot/rpi-mysql:latest 
          image: mariadb:10.5.12
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
          - name: storage
            mountPath: /var/lib/mysql
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mariadbpvc
