mariadb/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: owncloud
  name: mariadb
  labels:
    app: mariadb
    type: database
spec:
  ports:
  - port: 3306
    name: mariadb
  clusterIP: None
  selector:
    app: mariadb
